Setting up imports and basic configuration

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXaulfz4WaH3spClf2AXmj",
+      "authorship_tag": "ABX9TyM4DsNXdrt/MgqxW+OoL0vU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,28 +28,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "AZBo7KlC8g0j"
+        "id": "AZBo7KlC8g0j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5f29c44-51b6-4f9b-b3fc-e79a22a47531"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Libraries loaded. TensorFlow version: 2.19.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Basic libraries\n",
+        "# 1. IMPORTS & SETTINGS\n",
+        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "\n",
-        "# Visualisation\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import io, os\n",
+        "from google.colab import files\n",
         "\n",
-        "# Make plots display nicely\n",
-        "plt.style.use(\"default\")\n",
-        "sns.set(rc={\"figure.figsize\": (8, 5)})\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+        "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score, precision_score, recall_score, f1_score,\n",
+        "    classification_report, roc_curve, auc\n",
+        ")\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
-        "# For ignoring annoying warnings if they pop up\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "\n",
+        "import joblib\n",
         "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
+        "warnings.filterwarnings(\"ignore\")\n",
+        "sns.set(rc={\"figure.figsize\": (8,5)})\n",
+        "\n",
+        "print(\"Libraries loaded. TensorFlow version:\", tf.__version__)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FLqYjLEZKQrg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
