--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOq6w8aXZMLD2oDhvpz2/e",
+      "authorship_tag": "ABX9TyN0k0iK/o2vOcUs0ITZO3Ht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Telco Customer Churn — Notebook\n",
+        "Author: Thushanth Mahendran\n",
+        "Course: CM2604 Machine Learning\n"
+      ],
+      "metadata": {
+        "id": "FzEK7Hg6RbTE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load libraries and set plotting style."
+      ],
+      "metadata": {
+        "id": "ByLyVToFRpfo"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
@@ -34,6 +54,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "outputId": "a5f29c44-51b6-4f9b-b3fc-e79a22a47531"
       },
       "outputs": [
@@ -80,6 +101,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "upload dataset"
+      ],
+      "metadata": {
+        "id": "-F5k3y20Rs7o"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 2. LOAD CSV FROM COLAB FILE DIRECTORY\n",
@@ -104,6 +134,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
+        "collapsed": true,
         "id": "FLqYjLEZKQrg",
         "outputId": "7cf19573-5f49-4b22-f9aa-d1fdf7be87e3"
       },
@@ -495,6 +526,106 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Inspect dataset structure\n",
+        "Check columns, datatypes and missing values so we know what cleaning is needed."
+      ],
+      "metadata": {
+        "id": "a9epx9BtRRAe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CELL 3 - inspect columns/dtypes/missing\n",
+        "print(\"Shape (rows, cols):\", df.shape)\n",
+        "print(\"\\nColumns list:\")\n",
+        "print(df.columns.tolist())\n",
+        "\n",
+        "print(\"\\nDtypes summary:\")\n",
+        "print(df.dtypes)\n",
+        "\n",
+        "print(\"\\nMissing values (sorted):\")\n",
+        "print(df.isna().sum().sort_values(ascending=False).head(20))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "A5z8keYSRI4b",
+        "outputId": "afaf8962-ff7a-4b41-a7fd-8d5e1f161b46"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape (rows, cols): (7043, 21)\n",
+            "\n",
+            "Columns list:\n",
+            "['customerID', 'gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenure', 'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn']\n",
+            "\n",
+            "Dtypes summary:\n",
+            "customerID           object\n",
+            "gender               object\n",
+            "SeniorCitizen         int64\n",
+            "Partner              object\n",
+            "Dependents           object\n",
+            "tenure                int64\n",
+            "PhoneService         object\n",
+            "MultipleLines        object\n",
+            "InternetService      object\n",
+            "OnlineSecurity       object\n",
+            "OnlineBackup         object\n",
+            "DeviceProtection     object\n",
+            "TechSupport          object\n",
+            "StreamingTV          object\n",
+            "StreamingMovies      object\n",
+            "Contract             object\n",
+            "PaperlessBilling     object\n",
+            "PaymentMethod        object\n",
+            "MonthlyCharges      float64\n",
+            "TotalCharges         object\n",
+            "Churn                object\n",
+            "dtype: object\n",
+            "\n",
+            "Missing values (sorted):\n",
+            "customerID          0\n",
+            "gender              0\n",
+            "SeniorCitizen       0\n",
+            "Partner             0\n",
+            "Dependents          0\n",
+            "tenure              0\n",
+            "PhoneService        0\n",
+            "MultipleLines       0\n",
+            "InternetService     0\n",
+            "OnlineSecurity      0\n",
+            "OnlineBackup        0\n",
+            "DeviceProtection    0\n",
+            "TechSupport         0\n",
+            "StreamingTV         0\n",
+            "StreamingMovies     0\n",
+            "Contract            0\n",
+            "PaperlessBilling    0\n",
+            "PaymentMethod       0\n",
+            "MonthlyCharges      0\n",
+            "TotalCharges        0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GtTD3w77RPLj"
+      }
     }
   ]
 }
