EDA: quick sanity checks (IDs, TotalCharges samples)

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0k0iK/o2vOcUs0ITZO3Ht",
+      "authorship_tag": "ABX9TyP6zWJX8tGTPPszAsuU1zIn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -622,10 +622,47 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Quick sanity checks\n",
+        "Look for duplicates and unusual values in ID or TotalCharges."
+      ],
       "metadata": {
         "id": "GtTD3w77RPLj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CELL 4 - sanity checks\n",
+        "# If customerID exists, check duplicates\n",
+        "if 'customerID' in df.columns:\n",
+        "    print(\"customerID duplicates:\", df['customerID'].duplicated().sum())\n",
+        "\n",
+        "# Check a few samples from TotalCharges to see formatting\n",
+        "if 'TotalCharges' in df.columns:\n",
+        "    print(\"\\nTotalCharges sample values:\")\n",
+        "    print(df['TotalCharges'].sample(8).values)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I6sDO1NeSuAi",
+        "outputId": "a67c2781-9aa9-4f45-e514-a52859405d54"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "customerID duplicates: 0\n",
+            "\n",
+            "TotalCharges sample values:\n",
+            "['2078.55' '2727.8' '2931' '3078.1' '81.05' '1434.1' '901.25' '2799.75']\n"
+          ]
+        }
+      ]
     }
   ]
 }
