--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6zWJX8tGTPPszAsuU1zIn",
+      "authorship_tag": "ABX9TyM1NvplghdXHGEiGLcvMWKK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -663,6 +663,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Cleaning: convert TotalCharges to numeric and remove identifier\n",
+        "Convert TotalCharges to numeric (coerce invalid → NaN) and drop very few NaN rows.\n",
+        "Also drop customerID (identifier)."
+      ],
+      "metadata": {
+        "id": "ZIHlXS2FTLwr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CELL 5 - clean TotalCharges and drop ID\n",
+        "if 'TotalCharges' in df.columns and df['TotalCharges'].dtype == 'object':\n",
+        "    df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
+        "    print(\"TotalCharges NaNs after coercion:\", df['TotalCharges'].isna().sum())\n",
+        "\n",
+        "# If only a tiny fraction missing, drop them and report\n",
+        "if 'TotalCharges' in df.columns:\n",
+        "    n_missing = df['TotalCharges'].isna().sum()\n",
+        "    if n_missing > 0 and n_missing / len(df) < 0.01:\n",
+        "        df = df.dropna(subset=['TotalCharges']).reset_index(drop=True)\n",
+        "        print(\"Dropped rows with missing TotalCharges. New shape:\", df.shape)\n",
+        "    elif n_missing > 0:\n",
+        "        print(\"Warning: several TotalCharges missing; consider imputation instead of dropping.\")\n",
+        "\n",
+        "# Drop ID column if present\n",
+        "if 'customerID' in df.columns:\n",
+        "    df = df.drop(columns=['customerID'])\n",
+        "    print(\"Dropped customerID column. Shape now:\", df.shape)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "PFIafuw5TOx7"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
