Prepared target encoding and listed numeric/categorical features

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1NvplghdXHGEiGLcvMWKK",
+      "authorship_tag": "ABX9TyOv0RtPnflvqyXQf8tce8QW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,14 +48,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "AZBo7KlC8g0j",
+        "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "outputId": "a5f29c44-51b6-4f9b-b3fc-e79a22a47531"
+        "outputId": "05da4476-ec2a-4285-8aae-eb5593ed9798"
       },
       "outputs": [
         {
@@ -130,15 +130,15 @@
         "print(df.dtypes.value_counts())"
       ],
       "metadata": {
+        "collapsed": true,
+        "id": "FLqYjLEZKQrg",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "collapsed": true,
-        "id": "FLqYjLEZKQrg",
-        "outputId": "7cf19573-5f49-4b22-f9aa-d1fdf7be87e3"
+        "outputId": "c46d0b25-de1a-49d6-8de4-24adcaad7dfe"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3a9f2092-ce50-4c92-8360-28362a3f754a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-312a1df8-0821-41f1-ae89-262d168e1f12\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -300,7 +300,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a9f2092-ce50-4c92-8360-28362a3f754a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-312a1df8-0821-41f1-ae89-262d168e1f12')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -352,12 +352,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3a9f2092-ce50-4c92-8360-28362a3f754a button.colab-df-convert');\n",
+              "        document.querySelector('#df-312a1df8-0821-41f1-ae89-262d168e1f12 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3a9f2092-ce50-4c92-8360-28362a3f754a');\n",
+              "        const element = document.querySelector('#df-312a1df8-0821-41f1-ae89-262d168e1f12');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -377,8 +377,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f1329c04-52c5-4be0-8b46-18ce8db3ca7c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f1329c04-52c5-4be0-8b46-18ce8db3ca7c')\"\n",
+              "    <div id=\"df-7d391ac7-1c34-4c51-8d10-33f05cb69e1e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7d391ac7-1c34-4c51-8d10-33f05cb69e1e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -497,7 +497,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f1329c04-52c5-4be0-8b46-18ce8db3ca7c button');\n",
+              "            document.querySelector('#df-7d391ac7-1c34-4c51-8d10-33f05cb69e1e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -540,7 +540,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# CELL 3 - inspect columns/dtypes/missing\n",
+        "# 3 - inspect columns/dtypes/missing\n",
         "print(\"Shape (rows, cols):\", df.shape)\n",
         "print(\"\\nColumns list:\")\n",
         "print(df.columns.tolist())\n",
@@ -552,14 +552,14 @@
         "print(df.isna().sum().sort_values(ascending=False).head(20))"
       ],
       "metadata": {
+        "collapsed": true,
+        "id": "A5z8keYSRI4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "id": "A5z8keYSRI4b",
-        "outputId": "afaf8962-ff7a-4b41-a7fd-8d5e1f161b46"
+        "outputId": "62436783-e5c4-40cd-94db-c305ff2a6072"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +633,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# CELL 4 - sanity checks\n",
+        "# 4 - sanity checks\n",
         "# If customerID exists, check duplicates\n",
         "if 'customerID' in df.columns:\n",
         "    print(\"customerID duplicates:\", df['customerID'].duplicated().sum())\n",
@@ -644,13 +644,13 @@
         "    print(df['TotalCharges'].sample(8).values)"
       ],
       "metadata": {
+        "id": "I6sDO1NeSuAi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "I6sDO1NeSuAi",
-        "outputId": "a67c2781-9aa9-4f45-e514-a52859405d54"
+        "outputId": "b2f7f90e-b390-4643-9766-6eefd94f4c2e"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +659,8 @@
             "customerID duplicates: 0\n",
             "\n",
             "TotalCharges sample values:\n",
-            "['2078.55' '2727.8' '2931' '3078.1' '81.05' '1434.1' '901.25' '2799.75']\n"
+            "['1505.05' '2535.55' '1004.5' '7711.45' '3309.25' '706.6' '2540.1'\n",
+            " '2209.75']\n"
           ]
         }
       ]
@@ -678,7 +679,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# CELL 5 - clean TotalCharges and drop ID\n",
+        "# 5 - clean TotalCharges and drop ID\n",
         "if 'TotalCharges' in df.columns and df['TotalCharges'].dtype == 'object':\n",
         "    df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
         "    print(\"TotalCharges NaNs after coercion:\", df['TotalCharges'].isna().sum())\n",
@@ -695,14 +696,86 @@
         "# Drop ID column if present\n",
         "if 'customerID' in df.columns:\n",
         "    df = df.drop(columns=['customerID'])\n",
-        "    print(\"Dropped customerID column. Shape now:\", df.shape)\n",
-        ""
+        "    print(\"Dropped customerID column. Shape now:\", df.shape)\n"
       ],
       "metadata": {
-        "id": "PFIafuw5TOx7"
+        "id": "PFIafuw5TOx7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04739c71-4d34-4723-e240-d66b91b5fb71"
       },
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TotalCharges NaNs after coercion: 11\n",
+            "Dropped rows with missing TotalCharges. New shape: (7032, 21)\n",
+            "Dropped customerID column. Shape now: (7032, 20)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encode target and identify feature types\n",
+        "Encode Churn to 0/1 and show which columns are numeric and which are categorical."
+      ],
+      "metadata": {
+        "id": "l-W6s4_6LIJL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6 - target encoding and feature lists\n",
+        "if 'Churn' not in df.columns:\n",
+        "    raise ValueError(\"No 'Churn' column found — check dataset.\")\n",
+        "df['Churn'] = df['Churn'].map({'No':0, 'Yes':1})\n",
+        "\n",
+        "# Detect numeric and categorical\n",
+        "numeric_cols = df.select_dtypes(include=['int64','float64']).columns.tolist()\n",
+        "if 'Churn' in numeric_cols:\n",
+        "    numeric_cols.remove('Churn')\n",
+        "categorical_cols = df.select_dtypes(include=['object']).columns.tolist()\n",
+        "\n",
+        "print(\"Numeric columns (count):\", len(numeric_cols))\n",
+        "print(numeric_cols)\n",
+        "print(\"\\nCategorical columns (count):\", len(categorical_cols))\n",
+        "print(categorical_cols)\n",
+        "print(\"\\nChurn distribution (proportion):\")\n",
+        "print(df['Churn'].value_counts(normalize=True).round(3))"
+      ],
+      "metadata": {
+        "id": "3TUi__a8LHJH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c7486ae-c946-4586-9b8f-f3db6044dc78"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numeric columns (count): 4\n",
+            "['SeniorCitizen', 'tenure', 'MonthlyCharges', 'TotalCharges']\n",
+            "\n",
+            "Categorical columns (count): 15\n",
+            "['gender', 'Partner', 'Dependents', 'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod']\n",
+            "\n",
+            "Churn distribution (proportion):\n",
+            "Churn\n",
+            "0    0.734\n",
+            "1    0.266\n",
+            "Name: proportion, dtype: float64\n"
+          ]
+        }
+      ]
     }
   ]
 }
