Preprocessing: imputer, scaler, one-hot encoder pipeline built and fitted

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdzAb0O5pcVbxq5//D+F6a",
+      "authorship_tag": "ABX9TyPmpIshLofAq1Q8Hjnc9HzA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,7 +946,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 9 - train/test split (stratified)\n",
+        "# 9 - train/test split\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X = df.drop(columns=['Churn'])\n",
@@ -979,6 +979,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Preprocessing pipeline\n",
+        "Build ColumnTransformer: median imputation + scaling for numeric, most_frequent + one-hot for categorical."
+      ],
+      "metadata": {
+        "id": "ayyq1MbR0VJn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 10 - preprocessing pipeline\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+        "\n",
+        "# if SeniorCitizen shows up as object, convert it\n",
+        "if 'SeniorCitizen' in X_train.columns and X_train['SeniorCitizen'].dtype == 'object':\n",
+        "    X_train['SeniorCitizen'] = X_train['SeniorCitizen'].astype(int)\n",
+        "    X_test['SeniorCitizen'] = X_test['SeniorCitizen'].astype(int)\n",
+        "    if 'SeniorCitizen' in categorical_cols:\n",
+        "        categorical_cols.remove('SeniorCitizen')\n",
+        "        numeric_cols.append('SeniorCitizen')\n",
+        "\n",
+        "numeric_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='median')),\n",
+        "    ('scaler', StandardScaler())\n",
+        "])\n",
+        "\n",
+        "categorical_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore', sparse=False))\n",
+        "])\n",
+        "\n",
+        "preprocessor = ColumnTransformer(transformers=[\n",
+        "    ('num', numeric_transformer, [c for c in numeric_cols if c in X_train.columns]),\n",
+        "    ('cat', categorical_transformer, [c for c in categorical_cols if c in X_train.columns])\n",
+        "], remainder='drop')\n",
+        "\n",
+        "# Fit preprocessor on training data to inspect how many output features we get\n",
+        "preprocessor.fit(X_train)\n",
+        "try:\n",
+        "    n_cat_feats = preprocessor.named_transformers_['cat'].named_steps['onehot'].get_feature_names_out().shape[0]\n",
+        "except Exception:\n",
+        "    n_cat_feats = 0\n",
+        "n_num = len([c for c in numeric_cols if c in X_train.columns])\n",
+        "print(\"Numeric features:\", n_num, \"One-hot features:\", n_cat_feats, \"Total:\", n_num + n_cat_feats)"
+      ],
+      "metadata": {
+        "id": "zyVpOo5X0Uvl"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
