Decision Tree baseline training and evaluation

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmpIshLofAq1Q8Hjnc9HzA",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOJcjDcevfidCQAQU8yuU8K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Load libraries and set plotting style."
+        "####Load libraries and set plotting style."
       ],
       "metadata": {
         "id": "ByLyVToFRpfo"
@@ -48,13 +49,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "AZBo7KlC8g0j",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02137e67-3e4b-416a-e580-367176f298df"
+        "outputId": "a702f8a9-b028-472c-c0bd-342453df4c6c"
       },
       "outputs": [
         {
@@ -102,10 +103,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "upload dataset"
+        "####Upload Data set"
       ],
       "metadata": {
-        "id": "-F5k3y20Rs7o"
+        "id": "fkucipjaQGlc"
       }
     },
     {
@@ -135,9 +136,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "9c0e7586-08a0-420f-91f6-1730dabda205"
+        "outputId": "a56e1cb1-142b-47b1-8c86-56552fec2156"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-72e9e9b2-3c68-45f0-9513-6a444dff1661\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b3abe16c-df5e-4a5f-a596-1ab8ef8edd8f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -299,7 +300,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72e9e9b2-3c68-45f0-9513-6a444dff1661')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3abe16c-df5e-4a5f-a596-1ab8ef8edd8f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -351,12 +352,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-72e9e9b2-3c68-45f0-9513-6a444dff1661 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b3abe16c-df5e-4a5f-a596-1ab8ef8edd8f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-72e9e9b2-3c68-45f0-9513-6a444dff1661');\n",
+              "        const element = document.querySelector('#df-b3abe16c-df5e-4a5f-a596-1ab8ef8edd8f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -376,8 +377,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-96495cab-b83a-4112-a379-8a702a7db11a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-96495cab-b83a-4112-a379-8a702a7db11a')\"\n",
+              "    <div id=\"df-db74e0b2-e1b3-4705-a650-a2ac4732cc2a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-db74e0b2-e1b3-4705-a650-a2ac4732cc2a')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -496,7 +497,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-96495cab-b83a-4112-a379-8a702a7db11a button');\n",
+              "            document.querySelector('#df-db74e0b2-e1b3-4705-a650-a2ac4732cc2a button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -556,9 +557,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cfde386-55e1-48e1-b5f2-8525a26a8660"
+        "outputId": "ca733f04-b16b-4806-e7dc-f5c88c0ad166"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,9 +648,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da80ac32-e46e-418c-cfac-fddffce8f290"
+        "outputId": "9a626aa7-28b5-401e-838b-75dd35bca7ad"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +659,7 @@
             "customerID duplicates: 0\n",
             "\n",
             "TotalCharges sample values:\n",
-            "['4459.8' '1781.35' '497.6' '19.95' '3532.85' '7261.25' '1003.05' '7555']\n"
+            "['3263.9' '780.2' '1923.85' '2979.5' '639.65' '4162.05' '341.6' '537.35']\n"
           ]
         }
       ]
@@ -701,9 +702,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65d3565c-6659-48bb-db7c-9c654dd32436"
+        "outputId": "af7bd89a-5ef1-4e16-db88-5c85b5fc4784"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,9 +753,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b19a0164-0ac6-4a19-9790-38186e822d4c"
+        "outputId": "6bce1239-db18-48be-ec6f-7ad6dce8e2b4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,13 +809,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rkDuXJ7xa3hZ",
-        "outputId": "aeb0c83c-2ec4-4db2-d649-537860a4e9c0"
+        "outputId": "b5706a62-a148-4f4f-b560-33f11047358f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -883,13 +883,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8ZFkmIyVbvUx",
-        "outputId": "10752967-51f0-497e-c1a2-9dd5ed7bfb57"
+        "outputId": "d3e77910-2d16-45ca-cd50-6de923069f10"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -965,9 +964,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "egGPP-cKzW4e",
-        "outputId": "b08b6726-d1c6-40e6-d99d-5f2919fbde90"
+        "outputId": "20cccd99-c0f1-439c-d434-dfdc4915eb22"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,7 +1013,7 @@
         "\n",
         "categorical_transformer = Pipeline(steps=[\n",
         "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
-        "    ('onehot', OneHotEncoder(handle_unknown='ignore', sparse=False))\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
         "])\n",
         "\n",
         "preprocessor = ColumnTransformer(transformers=[\n",
@@ -1032,7 +1031,105 @@
         "print(\"Numeric features:\", n_num, \"One-hot features:\", n_cat_feats, \"Total:\", n_num + n_cat_feats)"
       ],
       "metadata": {
-        "id": "zyVpOo5X0Uvl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zyVpOo5X0Uvl",
+        "outputId": "9d20e2b1-8891-4958-a882-cf422642e29f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numeric features: 4 One-hot features: 41 Total: 45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 2 — Model building & experiments: Decision Tree baseline\n",
+        "Train a Decision Tree classifier using the preprocessing pipeline and report baseline metrics (accuracy, precision, recall, F1, AUC)."
+      ],
+      "metadata": {
+        "id": "5poQHpnbRqEI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Decision Tree baseline\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, roc_auc_score\n",
+        "\n",
+        "# Create pipeline: reuse preprocessor you fitted earlier\n",
+        "dt_pipeline = Pipeline([\n",
+        "    ('preproc', preprocessor),\n",
+        "    ('clf', DecisionTreeClassifier(random_state=42))\n",
+        "])\n",
+        "\n",
+        "# Fit baseline\n",
+        "dt_pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict on test set\n",
+        "y_pred_dt = dt_pipeline.predict(X_test)\n",
+        "# Probabilities for AUC\n",
+        "y_proba_dt = dt_pipeline.predict_proba(X_test)[:,1] if hasattr(dt_pipeline.named_steps['clf'], \"predict_proba\") else None\n",
+        "\n",
+        "# Compute metrics\n",
+        "dt_acc = accuracy_score(y_test, y_pred_dt)\n",
+        "dt_prec = precision_score(y_test, y_pred_dt, zero_division=0)\n",
+        "dt_rec = recall_score(y_test, y_pred_dt, zero_division=0)\n",
+        "dt_f1 = f1_score(y_test, y_pred_dt, zero_division=0)\n",
+        "dt_auc = roc_auc_score(y_test, y_proba_dt) if y_proba_dt is not None else None\n",
+        "\n",
+        "print(\"Decision Tree - Baseline\")\n",
+        "print(f\"Accuracy: {dt_acc:.4f}, Precision: {dt_prec:.4f}, Recall: {dt_rec:.4f}, F1: {dt_f1:.4f}\")\n",
+        "if dt_auc is not None:\n",
+        "    print(f\"AUC: {dt_auc:.4f}\")\n",
+        "\n",
+        "print(\"\\nClassification report:\")\n",
+        "print(classification_report(y_test, y_pred_dt, zero_division=0))"
+      ],
+      "metadata": {
+        "id": "EYxZOjJBRuVR",
+        "outputId": "00b73e2a-8309-4795-caeb-3baa8fd35ed4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision Tree - Baseline\n",
+            "Accuracy: 0.7306, Precision: 0.4934, Recall: 0.4973, F1: 0.4953\n",
+            "AUC: 0.6565\n",
+            "\n",
+            "Classification report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.82      0.82      0.82      1033\n",
+            "           1       0.49      0.50      0.50       374\n",
+            "\n",
+            "    accuracy                           0.73      1407\n",
+            "   macro avg       0.66      0.66      0.66      1407\n",
+            "weighted avg       0.73      0.73      0.73      1407\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jhCXoqcWSAI2"
       },
       "execution_count": null,
       "outputs": []
