Decision Tree baseline training and evaluation

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJcjDcevfidCQAQU8yuU8K",
+      "authorship_tag": "ABX9TyOs7mVRIOIRc9GxuwFKX7Sh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1051,11 +1051,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Task 2 — Model building & experiments: Decision Tree baseline\n",
-        "Train a Decision Tree classifier using the preprocessing pipeline and report baseline metrics (accuracy, precision, recall, F1, AUC)."
+        "# Task 2 — Model building & experiments: Decision Tree baseline\n"
       ],
       "metadata": {
         "id": "5poQHpnbRqEI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Train a Decision Tree classifier using the preprocessing pipeline and report baseline metrics (accuracy, precision, recall, F1, AUC)."
+      ],
+      "metadata": {
+        "id": "-Achk6uOT3XZ"
       }
     },
     {
@@ -1096,10 +1104,10 @@
       ],
       "metadata": {
         "id": "EYxZOjJBRuVR",
-        "outputId": "00b73e2a-8309-4795-caeb-3baa8fd35ed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "00b73e2a-8309-4795-caeb-3baa8fd35ed4"
       },
       "execution_count": 25,
       "outputs": [
