Tuned Decision Tree via GridSearchCV

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOs7mVRIOIRc9GxuwFKX7Sh",
+      "authorship_tag": "ABX9TyPyDyzTOalA4g/5WCEAdAvO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1134,8 +1134,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Decision Tree: hyperparameter tuning\n",
+        "a small GridSearchCV to improve Decision Tree performance. Keep the grid modest to save time."
+      ],
+      "metadata": {
+        "id": "yPamV8kKUMbW"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# GridSearchCV for Decision Tree\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "param_grid = {\n",
+        "    'clf__criterion': ['gini', 'entropy'],\n",
+        "    'clf__max_depth': [4, 8, 12, None],\n",
+        "    'clf__min_samples_leaf': [1, 3, 6]\n",
+        "}\n",
+        "\n",
+        "grid_dt = GridSearchCV(dt_pipeline, param_grid, cv=4, scoring='f1', n_jobs=-1, verbose=1)\n",
+        "grid_dt.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Best params:\", grid_dt.best_params_)\n",
+        "best_dt = grid_dt.best_estimator_\n",
+        "\n",
+        "# Evaluate tuned model\n",
+        "y_pred_best_dt = best_dt.predict(X_test)\n",
+        "y_proba_best_dt = best_dt.predict_proba(X_test)[:,1] if hasattr(best_dt.named_steps['clf'], \"predict_proba\") else None\n",
+        "\n",
+        "print(\"Tuned Decision Tree metrics:\")\n",
+        "print(\"F1:\", round(f1_score(y_test, y_pred_best_dt),4),\n",
+        "      \"Precision:\", round(precision_score(y_test, y_pred_best_dt, zero_division=0),4),\n",
+        "      \"Recall:\", round(recall_score(y_test, y_pred_best_dt, zero_division=0),4))\n",
+        "if y_proba_best_dt is not None:\n",
+        "    print(\"AUC:\", round(roc_auc_score(y_test, y_proba_best_dt),4))"
+      ],
       "metadata": {
         "id": "jhCXoqcWSAI2"
       },
