Prepared preprocessed arrays for neural network

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyDyzTOalA4g/5WCEAdAvO",
+      "authorship_tag": "ABX9TyMN318ZerbvdN7VpwcQIX9y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1177,6 +1177,50 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Prepare data arrays for Neural Network\n",
+        "Transform data using the fitted preprocessor so we have numeric arrays for Keras."
+      ],
+      "metadata": {
+        "id": "hp3gwCqSapDf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Preprocess and get numpy arrays for NN\n",
+        "X_train_proc = preprocessor.transform(X_train)\n",
+        "X_test_proc = preprocessor.transform(X_test)\n",
+        "\n",
+        "print(\"Preprocessed shapes -> X_train:\", X_train_proc.shape, \"X_test:\", X_test_proc.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_D_CxOFqao2Y",
+        "outputId": "d5b8597c-67db-4c3d-8210-b47b729212a9"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Preprocessed shapes -> X_train: (5625, 45) X_test: (1407, 45)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SPS77Ntcax40"
+      }
     }
   ]
 }
